# praktikum3-rsi

./: README.md  desktop.ini
fullstack-app/backend/: .gitignore  alembic.ini  docker-compose.yml  inpo-cara-ngerjain.txt  inpo-ngerjain.txt  pyproject.toml
fullstack-app/backend/alembic/: env.py
fullstack-app/backend/src/backend/: app.py  models.py
fullstack-app/backend/src/backend/controllers/: account_controller.py  event_controller.py  registration_controller.py  role_controller.py  user_controller.py
fullstack-app/backend/src/backend/database/: connection.py
fullstack-app/backend/src/backend/database/schema/: models.py
fullstack-app/backend/src/backend/dto/: account_dto.py  event_dto.py  registration_dto.py  role_dto.py  user_dto.py
fullstack-app/backend/src/backend/repositories/: account_repo.py  event_repo.py  registration_repo.py  role_repo.py  user_repo.py
fullstack-app/backend/src/backend/routes/: account_route.py  event_route.py  registration_route.py  role_route.py  user_route.py
fullstack-app/backend/src/backend/services/: account_service.py  event_service.py  registration_service.py  role_service.py  user_service.py
fullstack-app/backend/src/backend/utils/: security.py
fullstack-app/frontend/: components.json  package-lock.json  package.json
fullstack-app/frontend/app/: globals.css  page.tsx
fullstack-app/frontend/app/admin/events/: page.tsx
fullstack-app/frontend/app/auth/register/: page.tsx
fullstack-app/frontend/app/events/: page.tsx
fullstack-app/frontend/components/: auth-buttons.tsx
